Bug 421584. SVG that is filtered does not repaint correctly when filtered elements change/move. Patch by Robert Longson longsonr@gmail.com, r=jwatt@jwatt.org, sr=roc@ocallahan.org, a=blocking1.9