layout/svg/base/src/nsSVGUtils.h
@@ -270,6 +270,11 @@ public:
    */
   static void UpdateFilterRegion(nsIFrame *aFrame);
 
+  /*
+   * Update the filter invalidation region for ancestor frames, if relevant.
+   */
+  static void NotifyAncestorsOfFilterRegionChange(nsIFrame *aFrame);
+
   /* enum for specifying coordinate direction for ObjectSpace/UserSpace */
   enum ctxDirection { X, Y, XY };
 
